# Vibe_coding

./: .gitignore  README.md  test.py
.claude/: settings.local.json
amoremall_agent/: README.md  amoremall_client.py  app.py  message_generator.py  rag.py  requirements.txt
diffusion_visualizer/: README.md  requirements.txt
filename_change/: README.md
filename_change/js/: README.md  (+4 more)
flutter_login_app/: README.md  pubspec.yaml
pdf_slice_tool/: .gitignore  README.md  __init__.py  example.py  pdf_slicer.py  requirements.txt
radex_style_viewer/: PERFORMANCE.md  QUICK_START.md  README.md  create_test_segy.py  requirements.txt  test_data.sgy
react_bookstore_app/: README.md  index.html  package.json
recommendation_system/: README.md  __init__.py  main.py  requirements.txt
segy_2d_viewer/: README.md  create_test_segy.py  requirements.txt
segy_2d_viewer_rust/: Cargo.toml  README.md  build.sh
segy_2d_viewer_rust/src/: auto_picking.rs  gl_renderer.rs  main.rs  picking_manager.rs  segy_reader.rs
segy_diffusion_denoiser/: README.md  requirements.txt
segy_toolkit/: INTERPOLATION.md  README.md  __init__.py  interpolation.py  io.py  seafloor.py  visualization.py
segy_trace_viewer/: README.md  requirements.txt
segy_viz/: 4ch_18_150.CSV  README.md  __init__.py  agc.py  colormap.py  control_panel.py  display_modes.py  gl_display.py  header_viewer.py  main.py  main_window.py  requirements.txt  segy_loader.py  tes.py
ship_offset_visualizer/: README.md  __init__.py  data.py  inventor.py  io.py  main.py  viewer.py
tracker/: main.py  trace_viewer.py  ui_window.py
(+82 files in other folders)
