[package]
name = "segy_2d_viewer_rust"
version = "1.0.0"
edition = "2021"
authors = ["SEG-Y Viewer Team"]

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_glow = "0.27"
glow = "0.13"
byteorder = "1.5"
rayon = "1.8"
memmap2 = "0.9"
anyhow = "1.0"
csv = "1.3"
rfd = "0.14"
bytemuck = "1.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
